// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExerciseList component Clicking on a row should match the snapshot 1`] = `
<_ExerciseList
  list={
    Array [
      Object {
        "exerciseId": "xxy",
        "name": "Push-ups",
        "reps": 20,
        "restTime": 90,
        "results": Array [],
        "sets": 5,
        "weight": 0,
      },
      Object {
        "exerciseId": "xyy",
        "name": "Australian pull-ups",
        "reps": 12,
        "restTime": 30,
        "results": Array [],
        "sets": 5,
        "weight": 0,
      },
    ]
  }
  onOrderChangeClick={[Function]}
  title="Some title"
>
  <div>
    <span
      data-css-3atj9v=""
      data-test="list-title"
    >
      Some title
    </span>
    <ul
      data-css-1d8iqpl=""
      data-test="list"
    >
      <_ExerciseListRow
        exerciseId="xxy"
        name="Push-ups"
        onRowClick={[Function]}
        reps={20}
        restTime={90}
        results={Array []}
        sets={5}
        weight={0}
      >
        <li
          data-test="exercise-row-xxy"
          onClick={[Function]}
        >
          <h3
            data-css-17h8928=""
          >
            Push-ups
          </h3>
          <span
            data-css-1jge3ly=""
          >
            0
             kg x 
            20
             reps x 
            5
             sets
          </span>
        </li>
      </_ExerciseListRow>
      <_ExerciseListRow
        exerciseId="xyy"
        name="Australian pull-ups"
        onRowClick={[Function]}
        reps={12}
        restTime={30}
        results={Array []}
        sets={5}
        weight={0}
      >
        <li
          data-test="exercise-row-xyy"
          onClick={[Function]}
        >
          <h3
            data-css-17h8928=""
          >
            Australian pull-ups
          </h3>
          <span
            data-css-1jge3ly=""
          >
            0
             kg x 
            12
             reps x 
            5
             sets
          </span>
        </li>
      </_ExerciseListRow>
    </ul>
  </div>
</_ExerciseList>
`;

exports[`ExerciseList component When list is empty and has length 0 should not render the component and return null 1`] = `undefined`;

exports[`ExerciseList component should render without crashing 1`] = `
<div>
  <span
    data-css-3atj9v=""
    data-test="list-title"
  >
    Some title
  </span>
  <ul
    data-css-1d8iqpl=""
    data-test="list"
  >
    <_ExerciseListRow
      exerciseId="xxy"
      name="Push-ups"
      onRowClick={[Function]}
      reps={20}
      restTime={90}
      results={Array []}
      sets={5}
      weight={0}
    />
    <_ExerciseListRow
      exerciseId="xyy"
      name="Australian pull-ups"
      onRowClick={[Function]}
      reps={12}
      restTime={30}
      results={Array []}
      sets={5}
      weight={0}
    />
  </ul>
</div>
`;
